@@ -5,6 +5,8 @@ espresso (0.99.32) UNRELEASED; urgency=low
     - Prevent gnome-screensaver from kicking in while Espresso is running
       (closes: Malone #34510 espresso-frontend-gtk task).
     - Translate window title immediately when changing language.
+  * Make sure that debconffilter never tries to call the same widget more
+    than once for a single command.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 20 Mar 2006 11:45:26 +0000
 
